--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -3,6 +3,26 @@
     {% if button.amount %}
     <input name="amount" value="{{ button.amount|number }}" type="hidden">
     {% endif %}
+    {# TESTING #}
+    <!-- Provide a drop-down menu option field with prices. -->
+    <input type="hidden" name="on1" value="Size">
+    <label for="os1">Size</label>
+    <select name="os1" id="os1">
+        <option value="Select a size">-- Select a size --</option>
+        <option value="2x4">2 x 4 - $3.95 USD</option>
+        <option value="3x5">3 x 5 - $4.95 USD</option>
+        <option value="4x6">4 x 6 - $5.95 USD</option>
+    </select>
+
+    <!-- Specify the price that PayPal uses for each option. -->
+    <input type="hidden" name="option_index" value="1">
+    <input type="hidden" name="option_select0" value="2x4">
+    <input type="hidden" name="option_amount0" value="3.95">
+    <input type="hidden" name="option_select1" value="3x5">
+    <input type="hidden" name="option_amount1" value="4.95">
+    <input type="hidden" name="option_select2" value="4x6">
+    <input type="hidden" name="option_amount2" value="5.95">
+    {# END TESTING #}
     <input name="item_number" value="{{ button.sku }}" type="hidden">
     <input name="no_shipping" value="{{ button.shippingOption }}" type="hidden">
     <input name="undefined_quantity" value="{{ button.customerQuantity }}" type="hidden">
