--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -6,6 +6,14 @@
     {# TESTING #}
     <!-- Provide a drop-down menu option field with prices. -->
     <input type="hidden" name="on1" value="Size">
+    <input type="hidden" name="on2" value="Color">
+    <label for="os2">Size</label>
+    <select name="os2" id="os2">
+        <option value="Select a size">-- Select a size --</option>
+        <option value="blue">Blue</option>
+        <option value="green">Green</option>
+        <option value="red">Green</option>
+    </select>
     <label for="os1">Size</label>
     <select name="os1" id="os1">
         <option value="Select a size">-- Select a size --</option>
