--- a/src/templates/_frontend/button.twig
+++ b/src/templates/_frontend/button.twig
@@ -1,36 +1,27 @@
+{% spaceless %}
 <form class="paypal-button" method="post" action="{{ button.getPaypalUrl() }}" target="_blank">
     <input name="item_name" value="{{ button.name }}" type="hidden">
     {% if button.amount %}
     <input name="amount" value="{{ button.amount|number }}" type="hidden">
     {% endif %}
-    {# TESTING #}
-    <!-- Provide a drop-down menu option field with prices. -->
-    <input type="hidden" name="on1" value="Size">
-    <input type="hidden" name="on2" value="Color">
-    <label for="os2">Size</label>
-    <select name="os2" id="os2">
-        <option value="Select a size">-- Select a size --</option>
-        <option value="blue">Blue</option>
-        <option value="green">Green</option>
-        <option value="red">Green</option>
-    </select>
-    <label for="os1">Size</label>
-    <select name="os1" id="os1">
-        <option value="Select a size">-- Select a size --</option>
-        <option value="2x4">2 x 4 - $3.95 USD</option>
-        <option value="3x5">3 x 5 - $4.95 USD</option>
-        <option value="4x6">4 x 6 - $5.95 USD</option>
-    </select>
-
-    <!-- Specify the price that PayPal uses for each option. -->
-    <input type="hidden" name="option_index" value="1">
-    <input type="hidden" name="option_select0" value="2x4">
-    <input type="hidden" name="option_amount0" value="3.95">
-    <input type="hidden" name="option_select1" value="3x5">
-    <input type="hidden" name="option_amount1" value="4.95">
-    <input type="hidden" name="option_select2" value="4x6">
-    <input type="hidden" name="option_amount2" value="5.95">
-    {# END TESTING #}
+    {# <!-- Provide a drop-down menu option field with prices. --> #}
+    {% if button.enupalPaypalPricedVariants is defined and button.enupalPaypalPricedVariants %}
+        {% set pricedOptionsBlock = button.enupalPaypalPricedVariants.first() %}
+        <input type="hidden" name="on0" value="{{ pricedOptionsBlock.variantName }}">
+        <label class="pricedVariantsLabel" for="os0">{{ pricedOptionsBlock.variantName }}</label>
+        {% set hiddenFieldsHtml = '' %}
+        <select class="pricedVariants" name="os0" id="os0">
+            {% for row in pricedOptionsBlock.options %}
+                {% if loop.first %}
+                    <option value="Select a {{ pricedOptionsBlock.variantName }}">{{ "Select a"|t }} {{ pricedOptionsBlock.variantName }}</option>
+                {% endif %}
+                <option value="{{ row.handle }}">{{ row.optionLabel }}</option>
+                {% set hiddenFieldsHtml = hiddenFieldsHtml ~ '<input type="hidden" name="option_select'~loop.index0~'" value="'~row.handle~'"><input type="hidden" name="option_amount'~loop.index0~'" value="'~row.price|number~'">' %}
+            {% endfor %}
+        </select>
+        {{ hiddenFieldsHtml|raw }}
+        <br>
+    {% endif %}
     <input name="item_number" value="{{ button.sku }}" type="hidden">
     <input name="no_shipping" value="{{ button.shippingOption }}" type="hidden">
     <input name="undefined_quantity" value="{{ button.customerQuantity }}" type="hidden">
@@ -53,3 +44,4 @@
     <input name="bn" value="craft_plugin_paypal" type="hidden">
     <input style='border: none;' class='paypalbuttonimage' type='image' src='{{ button.getButtonUrl() }}' border='0' name='submit' alt='{{ "PayPal - The safer, easier way to pay online!"|t('enupal-paypal')}}'>
 </form>
+{% endspaceless %}
