Adds initial commit for Orders Element

--- a/src/templates/settings/default.twig
+++ b/src/templates/settings/default.twig
@@ -30,8 +30,8 @@
 
         {% namespace 'settings' %}
             {{ forms.field({
-                label: "Default values"|t('enupal-paypal')|upper,
-                instructions: "These are the default settings when create a new Paypal Button and you can override it as per-button basis."|t('enupal-paypal')|upper,
+                label: "Default values"|t('enupal-paypal'),
+                instructions: "These are the default settings when create a new Paypal Button and you can override it as per-button basis."|t('enupal-paypal'),
             }, null) }}
             <hr>
             {{ forms.textField({
