Adds initial commit for Charts

--- a/src/templates/orders/index.twig
+++ b/src/templates/orders/index.twig
@@ -11,3 +11,4 @@
 {% set title = "Orders"|t %}
 {% set elementType = 'enupal\\paypal\\elements\\Order' %}
 {% do view.registerAssetBundle("enupal\\paypal\\assetBundles\\FontAwesomeAsset") %}
+{% do view.registerAssetBundle("enupal\\paypal\\assetBundles\\OrdersAsset") %}
