--- a/src/templates/_emails/customer.twig
+++ b/src/templates/_emails/customer.twig
@@ -145,8 +145,8 @@
                                                         <td height="16" style="height: 16px; line-height:16px;"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td align="center" valign="top" style="line-height: 0px !important;"><img
-                                                                    src="images/divider.jpg" alt="divider" width="40"/>
+                                                        <td align="center" valign="top" style="line-height: 0px !important;">
+                                                            <hr>
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -156,7 +156,18 @@
                                                         <td align="center" valign="top" mc:edit="body5"
                                                             style="color: #434345; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 16px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 400;">
                                                             {{ "Order Number:"|t }} {{ order.number }}
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+
+                                                        <td align="center" valign="top" mc:edit="body5"
+                                                            style="color: #434345; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 16px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 400;">
                                                             {{ "Quantity:" }} {{ order.quantity }}
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td align="center" valign="top" mc:edit="body5"
+                                                            style="color: #434345; font-weight: bolder; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif; font-size: 16px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 400;">
                                                             {{ "Total: " }} {{ order.totalPrice|currency(order.currency) }}
                                                         </td>
                                                     </tr>
@@ -175,10 +186,10 @@
                                                                             <tr>
                                                                                 <td align="center" valign="top" mc:edit="body6"
                                                                                     style="color: #ffffff; font-family: 'Trebuchet MS', Helvetica, sans-serif, 'Lato', sans-serif;  padding: 0 25px; font-size: 14px; mso-line-height-rule: exactly; line-height: 24px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.06em">
-                                          <span style="color: #ffffff;">
-                                            <a style="text-decoration: none; color: #ffffff;"
-                                               href="{{ order.getButton().returnUrl }}">read more</a>
-                                          </span>
+                                                                                      <span style="color: #ffffff;">
+                                                                                        <a style="text-decoration: none; color: #ffffff;"
+                                                                                           href="{{ order.getButton().returnUrl }}">read more</a>
+                                                                                      </span>
                                                                                 </td>
                                                                             </tr>
                                                                             <tr>
