--- a/src/templates/orders/_orderInfo.twig
+++ b/src/templates/orders/_orderInfo.twig
@@ -30,7 +30,7 @@
                 <td><strong>{{ "Email"|t('enupal-paypal') }}</strong>
                 </td>
                 <td>
-                    <a href="{{ order.email }}">{{ order.email }}</a>
+                    <a href="mailto:{{ order.email }}">{{ order.email }}</a>
                 </td>
             </tr>
             <tr>
