--- a/src/templates/_layouts/settings.twig
+++ b/src/templates/_layouts/settings.twig
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ cpUrl('enupal-paypal/settings/adminnotifications') }}" {% if selectedSidebarItem == 'notifications' %} class="sel" {% endif %}><i
+                <a href="{{ cpUrl('enupal-paypal/settings/adminnotifications') }}" {% if selectedSidebarItem == 'adminnotifications' %} class="sel" {% endif %}><i
                             class="fa fa-envelope fa-fw" aria-hidden="true"></i>&nbsp;{{ "Admin Notifications"|t('enupal-paypal') }}
                 </a>
             </li>
